c/src/test/resources/c/nec_inline_bnc/invalid/ex20-1024.ctrl
<controlFile>
  <sourceFile name="../ex20.c" id="1" />
  <run>
    <startPosition fileId="1" line="3" />
    <wayPoint fileId="1" line="10" />
    <wayPoint fileId="1" line="15" >
      <loop iterTimes="1024" />
    </wayPoint>
    <endPosition fileId="1" line="28" />
  </run>
</controlFile>